cmake_minimum_required(VERSION 3.27)
project(22_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(22_C__
        C++11/auto.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/11_constexpr.cpp
        C++11_补充/12_委托构造函数&&继承构造函数.cpp
        C++11_补充/13_右值引用.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/14_移动语义与完美转发.cpp)
