cmake_minimum_required(VERSION 3.27)
project(22_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(22_C__
        C++11/auto.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/11_constexpr.cpp
        C++11_补充/12_委托构造函数&&继承构造函数.cpp
        C++11_补充/13_右值引用.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/10_lambda.cpp
        C++11_补充/14_移动语义与完美转发.cpp
        C++11_补充/15_包装器与绑定器.cpp
        C++11_补充/16_POD.cpp
        C++11_补充/17_默认函数控制.cpp
        C++11_补充/18_friend改进.cpp
        C++11_补充/19_强枚举.cpp
        C++11_补充/20_非受限联合体.cpp
        C++11_补充/21_share_ptr.cpp
        C++11_补充/22_unique_ptr.cpp
        C++11_补充/23_weak_ptr.cpp)
