cmake_minimum_required(VERSION 3.10.0)
project(Cpp_11 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(Cpp_11 
# 01_原始字面量.cpp
# 02_long_long.cpp 
# 03_类成员表初始化.cpp
# 04_final&&overrid.cpp
# 05_数值和字符串互转.cpp
# 06_static_assert_断言.cpp
# 07_noexpect.cpp
# 08_范围for循环.cpp 
# 09_nullptr.cpp
# 10_lambda.cpp
# 11_constexpr.cpp
# 12_委托构造函数&&继承构造函数.cpp
# 13_右值引用.cpp
# 14_移动语义与完美转发.cpp
# 15_包装器与绑定器.cpp
# 16_POD.cpp
# 17_默认函数控制.cpp
# 18_friend改进.cpp
# 19_强枚举.cpp
# 20_非受限联合体.cpp
# 21_share_ptr.cpp
# 22_unique_ptr.cpp
# 23_weak_ptr.cpp
# 24_chrono.cpp 
# 25_thread.cpp 
# 26_this_thread.cpp
# 27_call_once.cpp
# 28_mutex.cpp
# 29_lock_guard.cpp
30_条件变量.cpp)

